
* Unreleased

** Added

- =grepcount= command for searching files and organising
  result on number of matches

- =greptxt= and =greptext= aliases for searching =.txt= files
  and organising results on number of matches

- =cman= alias for =connmanctl=

- =office-monitor-show= and =office-monitor-hide= commands for
  enabling/disabling office monitor

- support for high-priority custom scripts

- support for personal environment file

*** Installer

- =configure_dev_terminal= recipe

- install configuration for =agda=

- install configuration for =htop=

- install configuration for =texlive=

*** Snippets

*** =latex-mode=

- =begin=
- =lists/itemize=
- =math/align-star=
- =proof=
- =sectioning/paragraph=
- =sectioning/section=
- =sectioning/subparagraph=
- =slide=
- =todo-bmi=
- =unused-lemma=

**** =org-mode=

- =blocks/block-latex=
- =blocks/block-quote=
- =blocks/source-block=
- =blocks/source-block-emacs-lisp=
- =includes/include=
- =includes/include-min-level=
- =properties/basic-property=
- =quote-with-author-and-time=
- =tex/begin-definition-tex=
- =tex/begin-tex=
- =tex/granule=
- =title=
- =todo-comment=

*** Xmobar

- indicator for network ESSID and quality

- indicator for usage and expected lifetime of battery

** Changed

- XScreenSaver disabled

** Fixed

- installer not detecting distribution when there were
  non-word characters after the name

** Removed

- =as= and =ash= aliases for aptitude-related programs

* 0.10.0 - 2019-11-12

** Added

- shell command for testing microphone

*** Emacs

- confirmation when quitting Emacs

- =helm-org= dependency

- support for viewing next actions categorised by energy

- =transient= as new configuration dependency

**** org-brain

- binding for jumping to friend items (=gf=)
- binding for jumping to history items (=gh=)
- binding for jumping to pinned items (=gp=)
- new academic brain
- support for switching brains via =SPC o B=

*** Installer

- new =with_default_config= helper for installing a program