@@ -1,0 +1,4 @@
+README.html
+.stack-work
+dist
+yarn.lock
